[project]
name = "tjutil"
version = "0.0.3"
description = "utilities for python by qiuzhanghua"
readme = "README.md"
authors = [{ name = "qiuzhanghua", email = "qiuzhanghua@icloud.com" }]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
